--- a/inge_db_connector/src/main/resources/hibernate.properties
+++ b/inge_db_connector/src/main/resources/hibernate.properties
@@ -8,7 +8,7 @@ hibernate.javax.cache.uri=ehcache.xml
 hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
 hibernate.temp.use_jdbc_metadata_defaults=true
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=update
 show_sql=false
 #Use Hibernate 5.3 compatible naming strategy
 hibernate.id.db_structure_naming_strategy=legacy
