new BatchProcess VI

--- a/inge_db_connector/src/main/resources/hibernate.properties
+++ b/inge_db_connector/src/main/resources/hibernate.properties
@@ -8,5 +8,5 @@ hibernate.jdbc.time_zone=UTC
 hibernate.temp.use_jdbc_metadata_defaults=true
 hibernate.hbm2ddl.auto=update
 show_sql=false
-#Use Hibernate 5.3 compatible naming strategy
+#Use Hibernate 5.3 compatible naming strategy -> https://docs.jboss.org/hibernate/orm/6.0/migration-guide/migration-guide.html
 hibernate.id.db_structure_naming_strategy=legacy
