--- a/inge_db_connector/pom.xml
+++ b/inge_db_connector/pom.xml
@@ -19,7 +19,27 @@
 		<tag>HEAD</tag>
 	</scm>
 
+
+
+
 	<build>
+		<resources>
+			<!--Exclude ehcache.xml from filtering, as it interpretes system properties with the same syntax ${...} -->
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<excludes>
+					<exclude>ehcache.xml</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>ehcache.xml</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -88,6 +108,7 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 		</dependency>
 		-->
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
