--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,11 @@
 				<version>4.5.14</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>4.4.16</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-core</artifactId>
 				<version>2.7.0</version>
@@ -387,12 +392,12 @@
 			<dependency>
 				<groupId>org.elasticsearch.client</groupId>
 				<artifactId>elasticsearch-rest-high-level-client</artifactId>
-				<version>8.11.3</version>
+				<version>8.12.2</version>
 			</dependency>
 			<dependency>
 				<groupId>co.elastic.clients</groupId>
 				<artifactId>elasticsearch-java</artifactId>
-				<version>8.11.3</version>
+				<version>8.12.2</version>
 			</dependency>
 
 			<!-- Hibernate -->
