unused properties II

--- a/reindex_util/src/main/resources/pubman.properties
+++ b/reindex_util/src/main/resources/pubman.properties
@@ -205,6 +205,7 @@ inge.pubman.stylesheet.url=${inge.pubman.stylesheet.url}
 inge.pubman_presentation.viewFullItem.defaultSize=${inge.pubman_presentation.viewFullItem.defaultSize}
 
 inge.rest.api.description=${inge.rest.api.description}
+inge.rest.file.path=${inge.rest.file.path}
 inge.rest.service.url=${inge.rest.service.url}
 inge.rest.development.admin.username=${inge.rest.development.admin.username}
 inge.rest.development.admin.password=${inge.rest.development.admin.password}
