--- a/pom.xml
+++ b/pom.xml
@@ -1036,6 +1036,7 @@
 		<inge.doi.service.use>true</inge.doi.service.use>
 		<inge.email.alternative.moderator>pure-support@listsrv.mpg.de</inge.email.alternative.moderator>
 		<inge.email.mailservername>mx04.mpdl.mpg.de</inge.email.mailservername>
+		<inge.email.send.oa.mail.use>false</inge.email.send.oa.mail.use>
 		<inge.email.sender>pubman@mpdl.mpg.de</inge.email.sender>
 		<inge.email.withauthentication>false</inge.email.withauthentication>
 		<inge.es.password />
@@ -1233,6 +1234,231 @@
 			</properties>
 		</profile>
 
+		<!-- activate this profile for an Gfz build -->
+		<profile>
+			<id>env-gfz</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<gfz.citation.style.use>true</gfz.citation.style.use>
+				<gfz.cone.reset.use>true</gfz.cone.reset.use>
+				<gfz.oa.mail.adress>openaccess@gfz-potsdam.de</gfz.oa.mail.adress>
+				<gfz.oa.mail.domain>@gfz-potsdam.de</gfz.oa.mail.domain>
+				<gfz.oa.mail.subject>GFZpublic: Open Access</gfz.oa.mail.subject>
+				<gfz.oa.mail.template>OpenAccessMailGFZ.vm</gfz.oa.mail.template>
+				<inge.auth.mpg.ip.csv.url />
+				<inge.auth.mpg.ip.json.url />
+				<inge.auth.mpg.ip.use>false</inge.auth.mpg.ip.use>
+				<inge.cone.cache.use>false</inge.cone.cache.use>
+				<inge.cone.extended.attributes.use>true</inge.cone.extended.attributes.use>
+				<inge.cone.modelsxml.path>models_gfz.xml</inge.cone.modelsxml.path>
+				<inge.cone.subjectVocab />
+				<inge.crossref.pid>bib@gfz-potsdam.de</inge.crossref.pid>
+				<inge.doi.service.create.url />
+				<inge.doi.service.url />
+				<inge.doi.service.use>false</inge.doi.service.use>
+				<inge.email.alternative.moderator>bib@gfz-potsdam.de</inge.email.alternative.moderator>
+				<inge.email.send.oa.mail.use>true</inge.email.send.oa.mail.use>
+				<inge.email.sender>bib@gfz-potsdam.de</inge.email.sender>
+				<inge.es.cluster.name.test />
+				<inge.es.transport.ips.test />
+				<inge.filestorage.seaweed_master_server_ip />
+				<inge.id.types.to.display>ADS,ARXIV,BIBTEX_CITEKEY,BMC,CONE,DOI,EDOC,GFZPOF,GFZPOFCCA,GFZPOFWEITERE,GFZPROJECT,ISBN,ISI,ISSN,OATYPE,OTHER,PATENT_APPLICATION_NR,PATENT_NR,PATENT_PUBLICATION_NR,PII,PMC,PMID,PND,PUBLISHER,REPORT_NR,SSRN,URI,URN,ZDB</inge.id.types.to.display>
+				<inge.pid.service.create.path />
+				<inge.pid.service.timeout>0</inge.pid.service.timeout>
+				<inge.pid.service.url />
+				<inge.pid.service.use>false</inge.pid.service.use>
+				<inge.pubman.blog.baseUrl />
+				<inge.pubman.blog.news />
+				<inge.pubman.build.hyphen>-</inge.pubman.build.hyphen>
+				<inge.pubman.build.mode>gfz</inge.pubman.build.mode>
+				<inge.pubman.contact.url />
+				<inge.pubman.footer.fileName />
+				<inge.pubman.handbook.url />
+				<inge.pubman.help.url />
+				<inge.pubman.logo.css>height:8em; padding-top:2.5em</inge.pubman.logo.css>
+				<inge.pubman.logo.url>/resources/images/GFZ.svg</inge.pubman.logo.url>
+				<inge.pubman.policy.url>https://www.gfz-potsdam.de/impressum</inge.pubman.policy.url>
+				<inge.pubman.privacy.url>https://www.gfz-potsdam.de/datenschutz</inge.pubman.privacy.url>
+				<inge.pubman.root.authors.icon>GFZ_authors</inge.pubman.root.authors.icon>
+				<inge.pubman.root.organisation.id>ou_persistent13</inge.pubman.root.organisation.id>
+				<inge.pubman.root.organization.name>GFZ</inge.pubman.root.organization.name>
+				<inge.pubman.stylesheet.url>/pubman/resources/cssFramework/themes/skin_GFZ/styles/theme.css</inge.pubman.stylesheet.url>
+				<inge.rest.development.file_url />
+				<inge.systemtype>production</inge.systemtype>
+			</properties>
+		</profile>
+
+		<!-- activate this profile for an Gfz-Test build -->
+		<profile>
+			<id>env-gfz-test</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<gfz.citation.style.use>true</gfz.citation.style.use>
+				<gfz.cone.reset.use>true</gfz.cone.reset.use>
+				<gfz.oa.mail.adress>openaccess@gfz-potsdam.de</gfz.oa.mail.adress>
+				<gfz.oa.mail.domain>@gfz-potsdam.de</gfz.oa.mail.domain>
+				<gfz.oa.mail.subject>GFZpublic: Open Access</gfz.oa.mail.subject>
+				<gfz.oa.mail.template>OpenAccessMailGFZ.vm</gfz.oa.mail.template>
+				<inge.auth.mpg.ip.csv.url />
+				<inge.auth.mpg.ip.json.url />
+				<inge.auth.mpg.ip.use>false</inge.auth.mpg.ip.use>
+				<inge.cone.cache.use>false</inge.cone.cache.use>
+				<inge.cone.extended.attributes.use>true</inge.cone.extended.attributes.use>
+				<inge.cone.modelsxml.path>models_gfz.xml</inge.cone.modelsxml.path>
+				<inge.cone.subjectVocab />
+				<inge.crossref.pid>bib@gfz-potsdam.de</inge.crossref.pid>
+				<inge.doi.service.create.url />
+				<inge.doi.service.url />
+				<inge.doi.service.use>false</inge.doi.service.use>
+				<inge.email.alternative.moderator>bib@gfz-potsdam.de</inge.email.alternative.moderator>
+				<inge.email.send.oa.mail.use>true</inge.email.send.oa.mail.use>
+				<inge.email.sender>bib@gfz-potsdam.de</inge.email.sender>
+				<inge.es.cluster.name.test />
+				<inge.es.transport.ips.test />
+				<inge.filestorage.seaweed_master_server_ip />
+				<inge.id.types.to.display>ADS,ARXIV,BIBTEX_CITEKEY,BMC,CONE,DOI,EDOC,GFZPOF,GFZPOFCCA,GFZPOFWEITERE,GFZPROJECT,ISBN,ISI,ISSN,OATYPE,OTHER,PATENT_APPLICATION_NR,PATENT_NR,PATENT_PUBLICATION_NR,PII,PMC,PMID,PND,PUBLISHER,REPORT_NR,SSRN,URI,URN,ZDB</inge.id.types.to.display>
+				<inge.pid.service.create.path />
+				<inge.pid.service.timeout>0</inge.pid.service.timeout>
+				<inge.pid.service.url />
+				<inge.pid.service.use>false</inge.pid.service.use>
+				<inge.pubman.blog.baseUrl />
+				<inge.pubman.blog.news />
+				<inge.pubman.build.hyphen>-</inge.pubman.build.hyphen>
+				<inge.pubman.build.mode>gfz</inge.pubman.build.mode>
+				<inge.pubman.contact.url />
+				<inge.pubman.footer.fileName />
+				<inge.pubman.handbook.url />
+				<inge.pubman.help.url />
+				<inge.pubman.logo.css>height:8em; padding-top:2.5em</inge.pubman.logo.css>
+				<inge.pubman.logo.url>/resources/images/GFZ.svg</inge.pubman.logo.url>
+				<inge.pubman.policy.url>https://www.gfz-potsdam.de/impressum</inge.pubman.policy.url>
+				<inge.pubman.privacy.url>https://www.gfz-potsdam.de/datenschutz</inge.pubman.privacy.url>
+				<inge.pubman.root.authors.icon>GFZ_authors</inge.pubman.root.authors.icon>
+				<inge.pubman.root.organisation.id>ou_persistent13</inge.pubman.root.organisation.id>
+				<inge.pubman.root.organization.name>GFZ</inge.pubman.root.organization.name>
+				<inge.pubman.stylesheet.url>/pubman/resources/cssFramework/themes/skin_GFZ/styles/theme.css</inge.pubman.stylesheet.url>
+				<inge.rest.development.file_url />
+				<inge.systemtype>production</inge.systemtype>
+			</properties>
+		</profile>
+
+		<!-- activate this profile for an Rifs build -->
+		<profile>
+			<id>env-rifs</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<gfz.citation.style.use>true</gfz.citation.style.use>
+				<gfz.cone.reset.use>true</gfz.cone.reset.use>
+				<gfz.oa.mail.adress />
+				<gfz.oa.mail.domain />
+				<gfz.oa.mail.subject />
+				<gfz.oa.mail.template />
+				<inge.auth.mpg.ip.csv.url />
+				<inge.auth.mpg.ip.json.url />
+				<inge.auth.mpg.ip.use>false</inge.auth.mpg.ip.use>
+				<inge.cone.cache.use>false</inge.cone.cache.use>
+				<inge.cone.extended.attributes.use>true</inge.cone.extended.attributes.use>
+				<inge.cone.modelsxml.path>models_rifs.xml</inge.cone.modelsxml.path>
+				<inge.cone.subjectVocab />
+				<inge.crossref.pid>bib@gfz-potsdam.de</inge.crossref.pid>
+				<inge.doi.service.create.url />
+				<inge.doi.service.url />
+				<inge.doi.service.use>false</inge.doi.service.use>
+				<inge.email.alternative.moderator>bib@gfz-potsdam.de</inge.email.alternative.moderator>
+				<inge.email.send.oa.mail.use>false</inge.email.send.oa.mail.use>
+				<inge.email.sender>bib@gfz-potsdam.de</inge.email.sender>
+				<inge.es.cluster.name.test />
+				<inge.es.transport.ips.test />
+				<inge.filestorage.seaweed_master_server_ip />
+				<inge.id.types.to.display>ADS,ARXIV,BIBTEX_CITEKEY,BMC,CONE,DOI,EDOC,RIFSPROJECT,ISBN,ISI,ISSN,OATYPE,OTHER,PATENT_APPLICATION_NR,PATENT_NR,PATENT_PUBLICATION_NR,PII,PMC,PMID,PND,PUBLISHER,REPORT_NR,SSRN,URI,URN,ZDB</inge.id.types.to.display>
+				<inge.pid.service.create.path />
+				<inge.pid.service.timeout>0</inge.pid.service.timeout>
+				<inge.pid.service.url />
+				<inge.pid.service.use>false</inge.pid.service.use>
+				<inge.pubman.blog.baseUrl />
+				<inge.pubman.blog.news />
+				<inge.pubman.build.hyphen>-</inge.pubman.build.hyphen>
+				<inge.pubman.build.mode>rifs</inge.pubman.build.mode>
+				<inge.pubman.contact.url />
+				<inge.pubman.footer.fileName />
+				<inge.pubman.handbook.url />
+				<inge.pubman.help.url />
+				<inge.pubman.logo.css>height:8em; padding-top:2.5em</inge.pubman.logo.css>
+				<inge.pubman.logo.url>/resources/images/rifs.jpg</inge.pubman.logo.url>
+				<inge.pubman.policy.url>https://www.rifs-potsdam.de/impressum</inge.pubman.policy.url>
+				<inge.pubman.privacy.url>https://www.rifs-potsdam.de/datenschutz</inge.pubman.privacy.url>
+				<inge.pubman.root.authors.icon>RIFS_authors</inge.pubman.root.authors.icon>
+				<inge.pubman.root.organisation.id>ou_96022</inge.pubman.root.organisation.id>
+				<inge.pubman.root.organization.name>RIFS</inge.pubman.root.organization.name>
+				<inge.pubman.stylesheet.url>/pubman/resources/cssFramework/themes/skin_GFZ/styles/theme.css</inge.pubman.stylesheet.url>
+				<inge.rest.development.file_url />
+				<inge.systemtype>production</inge.systemtype>
+			</properties>
+		</profile>
+
+		<!-- activate this profile for an Pik build -->
+		<profile>
+			<id>env-pik</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<gfz.citation.style.use>true</gfz.citation.style.use>
+				<gfz.cone.reset.use>true</gfz.cone.reset.use>
+				<gfz.oa.mail.adress>library@pik-potsdam.de</gfz.oa.mail.adress>
+				<gfz.oa.mail.domain>@pik-potsdam.de</gfz.oa.mail.domain>
+				<gfz.oa.mail.subject>PIKpublic: Open Access</gfz.oa.mail.subject>
+				<gfz.oa.mail.template>OpenAccessMailPIK.vm</gfz.oa.mail.template>
+				<inge.auth.mpg.ip.csv.url />
+				<inge.auth.mpg.ip.json.url />
+				<inge.auth.mpg.ip.use>false</inge.auth.mpg.ip.use>
+				<inge.cone.cache.use>false</inge.cone.cache.use>
+				<inge.cone.extended.attributes.use>true</inge.cone.extended.attributes.use>
+				<inge.cone.modelsxml.path>models_pik.xml</inge.cone.modelsxml.path>
+				<inge.cone.subjectVocab />
+				<inge.crossref.pid>bib@gfz-potsdam.de</inge.crossref.pid>
+				<inge.doi.service.create.url />
+				<inge.doi.service.url />
+				<inge.doi.service.use>false</inge.doi.service.use>
+				<inge.email.alternative.moderator>library@pik-potsdam.de</inge.email.alternative.moderator>
+				<inge.email.send.oa.mail.use>true</inge.email.send.oa.mail.use>
+				<inge.email.sender>library@pik-potsdam.de</inge.email.sender>
+				<inge.es.cluster.name.test />
+				<inge.es.transport.ips.test />
+				<inge.filestorage.seaweed_master_server_ip />
+				<inge.id.types.to.display>ADS,ARXIV,BIBTEX_CITEKEY,BMC,CONE,DOI,EDOC,ISBN,ISI,ISSN,MDB_ID,MODELMETHOD,OATYPE,ORGANISATIONALK,OTHER,PATENT_APPLICATION_NR,PATENT_NR,PATENT_PUBLICATION_NR,PII,PIKDOMAIN,PMC,PMID,PND,PUBLISHER,REGIONALK,REPORT_NR,RESEARCHTK,SSRN,URI,URN,WORKINGGROUP,ZDB</inge.id.types.to.display>
+				<inge.pid.service.create.path />
+				<inge.pid.service.timeout>0</inge.pid.service.timeout>
+				<inge.pid.service.url />
+				<inge.pid.service.use>false</inge.pid.service.use>
+				<inge.pubman.blog.baseUrl />
+				<inge.pubman.blog.news />
+				<inge.pubman.build.hyphen>-</inge.pubman.build.hyphen>
+				<inge.pubman.build.mode>pik</inge.pubman.build.mode>
+				<inge.pubman.contact.url />
+				<inge.pubman.footer.fileName />
+				<inge.pubman.handbook.url />
+				<inge.pubman.help.url />
+				<inge.pubman.logo.css>height:8em; padding-top:2.5em</inge.pubman.logo.css>
+				<inge.pubman.logo.url>/resources/images/pik.svg</inge.pubman.logo.url>
+				<inge.pubman.policy.url>https://www.pik-potsdam.de/impressum</inge.pubman.policy.url>
+				<inge.pubman.privacy.url>https://www.pik-potsdam.de/datenschutz</inge.pubman.privacy.url>
+				<inge.pubman.root.authors.icon>PIK_authors</inge.pubman.root.authors.icon>
+				<inge.pubman.root.organisation.id>ou_persistent13</inge.pubman.root.organisation.id>
+				<inge.pubman.root.organization.name>PIK</inge.pubman.root.organization.name>
+				<inge.pubman.stylesheet.url>/pubman/resources/cssFramework/themes/skin_PIK/styles/theme.css</inge.pubman.stylesheet.url>
+				<inge.rest.development.file_url />
+				<inge.systemtype>production</inge.systemtype>
+			</properties>
+		</profile>
+
+
 		<!-- profile for the daily build on continuum -->
 		<profile>
 			<id>jenkins_deploy</id>
@@ -1252,7 +1478,6 @@
 				<inge.pubman.instance.url>https://dev.inge.mpdl.mpg.de</inge.pubman.instance.url>
 				<inge.rest.development.enabled>false</inge.rest.development.enabled>
 				<inge.rest.development.file_url />
-				<inge.rest.service.url>https://dev.inge.mpdl.mpg.de/rest</inge.rest.service.url>
 				<inge.systemtype>dev</inge.systemtype>
 				<inge.unapi.service.url>https://dev.inge.mpdl.mpg.de/rest/unapi</inge.unapi.service.url>
 				<jboss.deploy.port>8889</jboss.deploy.port>
