--- a/reindex_util/src/main/resources/pubman.properties
+++ b/reindex_util/src/main/resources/pubman.properties
@@ -23,6 +23,12 @@
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
+gfz.citation.style.use=${gfz.citation.style.use}
+gfz.cone.reset.use=${gfz.cone.reset.use}
+gfz.oa.mail.adress=${gfz.oa.mail.adress}
+gfz.oa.mail.domain=${gfz.oa.mail.domain}
+gfz.oa.mail.subject=${gfz.oa.mail.subject}
+gfz.oa.mail.template=${gfz.oa.mail.template}
 
 # AA local
 # URL to the AA module, default is "/auth/".
@@ -98,6 +104,7 @@ inge.email.alternative.moderator=${inge.email.alternative.moderator}
 inge.email.authenticationpwd=${inge.email.authenticationpwd}
 inge.email.authenticationuser=${inge.email.authenticationuser}
 inge.email.mailservername=${inge.email.mailservername}
+inge.email.send.oa.mail.use=${inge.email.send.oa.mail.use}
 inge.email.sender=${inge.email.sender}
 inge.email.withauthentication=${inge.email.withauthentication}
 
@@ -206,8 +213,6 @@ inge.pubman.stylesheet.url=${inge.pubman.stylesheet.url}
 inge.pubman_presentation.viewFullItem.defaultSize=${inge.pubman_presentation.viewFullItem.defaultSize}
 
 inge.rest.api.description=${inge.rest.api.description}
-inge.rest.file.path=${inge.rest.file.path}
-inge.rest.service.url=${inge.rest.service.url}
 inge.rest.development.admin.username=${inge.rest.development.admin.username}
 inge.rest.development.admin.password=${inge.rest.development.admin.password}
 inge.rest.development.enabled=${inge.rest.development.enabled}
