--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -36,6 +36,9 @@ inge.aa.instance.url=${inge.aa.instance.url}
 # This should be set when multiple AA modules are used
 # Default is "http://localhost:8080/auth/clientLogin"
 inge.aa.default.target=${inge.aa.default.target}
+
+inge.aa.login.jsp=${inge.aa.login.jsp}
+
 # For a productive system, the key pair MUST be generated anew. If not, the system is unsafe.
 # Creating a pair of keys can be done with
 # de.mpg.escidoc.services.aa.crypto.KeyGenerator
