--- a/pubman_logic/pom.xml
+++ b/pubman_logic/pom.xml
@@ -11,7 +11,7 @@
 
 	<artifactId>pubman_logic</artifactId>
 	<name>pubman_logic</name>
-	
+
 	<scm>
 		<connection>scm:git:https://github.com/MPDL/INGe.git</connection>
 		<developerConnection>scm:git:https://github.com/MPDL/INGe.git</developerConnection>
@@ -68,7 +68,7 @@
 				</executions>
 			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -200,6 +200,10 @@
 			<groupId>org.passay</groupId>
 			<artifactId>passay</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>de.mpg.mpdl.inge</groupId>
+			<artifactId>dataacquisition</artifactId>
+		</dependency>
 	</dependencies>
-	
+
 </project>
