Update of docx4j and Tika

--- a/transformationManager/pom.xml
+++ b/transformationManager/pom.xml
@@ -116,7 +116,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.docx4j</groupId>
-			<artifactId>docx4j-ImportXHTML</artifactId>
+			<artifactId>docx4j-ImportXHTML-core</artifactId>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
