--- a/pom.xml
+++ b/pom.xml
@@ -263,12 +263,12 @@
 			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-core</artifactId>
-				<version>2.7.0</version>
+				<version>2.9.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-parsers-standard-package</artifactId>
-				<version>2.7.0</version>
+				<version>2.9.2</version>
 				<exclusions>
 					<exclusion>
 						<groupId>c3p0</groupId>
@@ -364,18 +364,18 @@
 			<dependency>
 				<groupId>org.docx4j</groupId>
 				<artifactId>docx4j-JAXB-ReferenceImpl</artifactId>
-				<version>11.4.8</version>
+				<version>11.5.0</version>
 			</dependency>
 			<!-- Required for docx4j -->
 			<dependency>
 				<groupId>org.docx4j</groupId>
 				<artifactId>docx4j-export-fo</artifactId>
-				<version>11.4.8</version>
+				<version>11.5.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.docx4j</groupId>
-				<artifactId>docx4j-ImportXHTML</artifactId>
-				<version>11.4.8</version>
+				<artifactId>docx4j-ImportXHTML-core</artifactId>
+				<version>11.5.0</version>
 			</dependency>
 
 			<!-- MapStruct -->
