--- a/inge_db_connector/src/main/resources/hibernate.properties
+++ b/inge_db_connector/src/main/resources/hibernate.properties
@@ -7,6 +7,11 @@ hibernate.jdbc.time_zone=UTC
 #Speed up startup, do not load all metadata from database
 hibernate.temp.use_jdbc_metadata_defaults=true
 hibernate.hbm2ddl.auto=update
-show_sql=false
+
+#hibernate.show_sql=true
+#hibernate.format_sql=true
+#hibernate.type=trace
+#hibernate.generate_statistics=true
+
 #Use Hibernate 5.3 compatible naming strategy -> https://docs.jboss.org/hibernate/orm/6.0/migration-guide/migration-guide.html
 hibernate.id.db_structure_naming_strategy=legacy
