--- a/transformationManager/src/main/resources/transformations/commonPublicationFormats/conf/bibtex.properties
+++ b/transformationManager/src/main/resources/transformations/commonPublicationFormats/conf/bibtex.properties
@@ -1,3 +1,2 @@
-configuration=CoNE=true,CurlyBracketsForCoNEAuthors=no,OrganizationalUnit=Max Planck Digital Library
+configuration=CoNE=false
 CoNE=true,false
-CurlyBracketsForCoNEAuthors=no,empty brackets,identifier and affiliation in brackets,affiliation id in brackets
