--- a/transformationManager/src/main/resources/transformations/commonPublicationFormats/conf/endnote.properties
+++ b/transformationManager/src/main/resources/transformations/commonPublicationFormats/conf/endnote.properties
@@ -1,4 +1,3 @@
-configuration=Flavor=OTHER,CoNE=true
+configuration=Flavor=OTHER,CoNE=false
 Flavor=CAESAR,ICE,IPP,BGC,MPFI,MPIB,MPIEA,MPIGEM,MPIMP,MPIMPExt,MPIO,OTHER
 CoNE=true,false
- 
