--- a/transformationManager/src/main/resources/transformations/commonPublicationFormats/conf/bmc2escidoc.properties
+++ b/transformationManager/src/main/resources/transformations/commonPublicationFormats/conf/bmc2escidoc.properties
@@ -1,3 +1,3 @@
-configuration=CoNE=true,Files_to_Import=both
+configuration=CoNE=false,Files_to_Import=both
 CoNE=true,false
 Files_to_Import=XML,PDF,both
