--- a/transformationManager/src/main/resources/transformations/otherFormats/conf/wos.properties
+++ b/transformationManager/src/main/resources/transformations/otherFormats/conf/wos.properties
@@ -1,3 +1,3 @@
-configuration=import-name=OTHER,CoNE=true
+configuration=import-name=OTHER,CoNE=false
 import-name=MPDL,MPI-HLR,MPL,OTHER
 CoNE=true,false
