--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -70,8 +70,14 @@ inge.cone.results.maximum=${inge.cone.results.maximum}
 inge.cone.service.url=${inge.cone.service.url}
 inge.cone.subjectVocab=${inge.cone.subjectVocab}
 
-inge.cron.pubman.sitemap=${inge.cron.pubman.sitemap}
 inge.cron.cleanup_staging_files=${inge.cron.cleanup_staging_files}
+inge.cron.cleanup_staging_files.hours=${inge.cron.cleanup_staging_files.hours}
+inge.cron.fix_broken_imports=${inge.cron.fix_broken_imports}
+inge.cron.fix_broken_imports.hours=${inge.cron.fix_broken_imports.hours}
+inge.cron.init_ip_list=${inge.cron.init_ip_list}
+inge.cron.init_search_index_fields=${inge.cron.init_search_index_fields}
+inge.cron.pubman.sitemap=${inge.cron.pubman.sitemap}
+inge.cron.refresh_cone_cache=${inge.cron.refresh_cone_cache}
 
 # Select the Javascript engine. Options are
 # "auto" for automatic choice
