cors by properties

--- a/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman_ear/src/main/resources/pubman.properties
@@ -281,3 +281,4 @@ inge.transformation.zfn.configuration.filename = ${inge.transformation.zfn.confi
 inge.transformation.zfn.stylesheet.filename = ${inge.transformation.zfn.stylesheet.filename}
 
 inge.unapi.service.url=${inge.unapi.service.url}
+inge.rest.access-control-allowed-origins=${inge.rest.access-control-allowed-origins}
