--- a/reindex_util/src/main/resources/pubman.properties
+++ b/reindex_util/src/main/resources/pubman.properties
@@ -131,6 +131,12 @@ inge.jwt.shared-secret=${inge.jwt.shared-secret}
 
 inge.logic.temporary_filesystem_root_path=${inge.logic.temporary_filesystem_root_path}
 
+inge.openai.url=${inge.openai.url}
+inge.openai.model=${inge.openai.model}
+inge.openai.prompt=${inge.openai.prompt}
+inge.openai.token=${inge.openai.token}
+inge.openai.temperature=${inge.openai.temperature}
+
 inge.pid.handle.activated=${inge.pid.handle.activated}
 inge.pid.handle.short=${inge.pid.handle.short}
 inge.pid.handle.url=${inge.pid.handle.url}
